# db-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
bd_interface/src/: main.py
bd_interface/src/app/: __init__.py
bd_interface/src/app/controllers/: post_controller.py
bd_interface/src/app/schemas/: post_schema.py  utils.py
bd_interface/src/config/: config.py
src/: main.py
src/app/: __init__.py
src/app/controllers/: db.py  post_controller.py
src/app/models/: post.py
src/app/schemas/: post_schema.py
src/config/: config.py
src/config/docker/: docker-compose.yml
src/config/python/: requirements.txt
